<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_explore"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExploreActivity">

    <include layout="@layout/common_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_above="@id/btn_navigation"
        android:orientation="vertical">
        <Button
            android:id="@+id/btn_weekly_data"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_weekly_data"
            android:textSize="35sp"
            android:textAlignment="textStart"
            />
        <Button
            android:id="@+id/btn_weekly_talent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_weekly_talent"
            android:textSize="35sp"
            android:textAlignment="textStart"/>
        <Button
            android:id="@+id/btn_my_talent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_my_talent"
            android:textSize="35sp"
            android:textAlignment="textStart"/>
    </LinearLayout>

    <include layout="@layout/common_bottom_navigation_bar"/>

</RelativeLayout>
