<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Task_HomeActivity">

    <include layout="@layout/common_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_above="@id/btn_navigation"
        android:orientation="vertical"
        android:id="@+id/linearLayout">
        <Button
            android:id="@+id/btn_errand"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_errand"
            android:textSize="40sp"
            android:textColor="#404040"
            android:background="@drawable/btn_button"
            android:textAlignment="center"
            />
        <Button
            android:id="@+id/btn_skill"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_skill"
            android:textSize="40sp"
            android:textColor="#404040"
            android:layout_marginTop="1dp"
            android:background="@drawable/btn_button2"
            android:textAlignment="center"/>
        <Button
            android:id="@+id/btn_counsel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_counsel"
            android:textColor="#404040"
            android:textSize="40sp"
            android:background="@drawable/btn_button3"
            android:layout_marginTop="1dp"
            android:textAlignment="center"/>
    </LinearLayout>

    <include layout="@layout/common_bottom_navigation_bar"/>

    <Button
        android:id="@+id/launch_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="7dp"
        android:text="发布" />

    <Button
        android:id="@+id/map_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/launch_button"
        android:layout_marginEnd="14dp"
        android:layout_toStartOf="@+id/launch_button"
        android:text="map" />


</RelativeLayout>
